available comment typo
Categories
(Core :: Networking: Cache, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox138 | --- | fixed |
People
(Reporter: elharo, Assigned: simon.fongnt)
Details
(Keywords: good-first-bug, Whiteboard: [necko-triaged])
Attachments
(1 file)
Steps to reproduce:
read the code around line 1199 in netwerk/cache2/CacheEntry.cpp
Actual results:
// Failure of this method may be legal when the alternative data requested
// is not avaialble or of a different type. Console error logs are
// ensured by CacheFile::OpenAlternativeInputStream.
Expected results:
// Failure of this method may be legal when the alternative data requested
// is not available or of a different type. Console error logs are
// ensured by CacheFile::OpenAlternativeInputStream.
Updated•1 year ago
|
Sorry to resend, I wonder if the previous comment has gone through to triage owner.
Comment 3•1 year ago
|
||
https://firefox-source-docs.mozilla.org/contributing/how_to_submit_a_patch.html
Feel free to submit a patch whenever you want.
https://firefox-source-docs.mozilla.org/contributing/how_to_submit_a_patch.html
Updated•1 year ago
|
Comment 6•1 year ago
|
||
| bugherder | ||
Description
•