Bug 1953748 - Fixed a typo in comment. r=necko-reviewers,sunil DONTBUILD

Changed a typo "avaialble" to "available".

Differential Revision: https://phabricator.services.mozilla.com/D243008